--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,6 +32,11 @@ on:
       - master
 
 env:
+  language: "java" #javascript, java, python
+  m2-cache-path: ~/.m2
+  cache-path: target/*
+  CACHE_KEY: prueba
+  version: "${{ github.sha }}"
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: prueba           # set this to your Amazon ECR repository name
   ECS_SERVICE: prueba-service                 # set this to your Amazon ECS service name
@@ -42,6 +47,32 @@ env:
                                                # containerDefinitions section of your task definition
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    name: build
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: '11' # The JDK version to make available on the path.
+          java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
+      #          architecture: x64 # (x64 or x86) - defaults to x64
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: |
+            ${{ env.m2-cache-path }}
+          key: ${{ env.CACHE_KEY }}-${{ hashFiles('**/pom.xml') }}-v1.0
+      - name: Working cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ${{ env.cache-path }}
+          key: ${{ env.CACHE_KEY }}-${{ env.version }}-target-v1.0
+      - name: Build with Maven
+        run: |
+          mvn clean install -s settings.xml -Dmaven.test.skip=false"
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
