--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -72,7 +72,7 @@ jobs:
           key: ${{ env.CACHE_KEY }}-${{ env.version }}-target-v1.0
       - name: Build with Maven
         run: |
-          mvn clean install -s settings.xml -Dmaven.test.skip=false"
+          mvn clean install -s settings.xml -Dmaven.test.skip=false
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
