--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -83,6 +83,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Restore Cache
+      uses: actions/cache@v2
+      with:
+        path: |
+          ${{ env.cache-path }}
+        key: ${{ env.CACHE_KEY }}-${{ env.version }}-target-v1.0
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
