--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=80
+spring.redis.database=0
+spring.redis.host=redis-prueba.dyylbn.0001.use1.cache.amazonaws.com
+spring.redis.port=6379
