--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=80
 spring.redis.database=0
-spring.redis.host=redis-prueba.dyylbn.0001.use1.cache.amazonaws.com
+spring.redis.host=localhost
 spring.redis.port=6379
+url.meli=https://api.mercadolibre.com/items
+redis.ttl=600
+trm=40000
